src/components/Presentation/Presentation.scss
@use '../../styles/variables' as *;

.presentation-section {
  margin-top: 200px;
  color: $textcolor-secondary;

  .presentation-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 15px;
    font-size: 22px;

    .presentation-photo {
      width: 200px;
      height: 200px;
      object-fit: cover;
      border-radius: 50%;
    }
  }

  .presentation-text {
    margin-top: 25px;
    display: flex;
    justify-content: center;
    text-align: center;
    font-size: 20px;
  }
}

@media (min-width: 320px) and (max-width: 768px) {
  .presentation-section {
    margin: 100px 30px 0px 30px;

    .presentation-container {
      .presentation-photo {
        width: 150px;
        height: 150px;
      }
    }
  }

  p {
    font-size: 14px;
  }
}

